# OpenGLEngine

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/iauto/myapplication/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/iauto/ogl/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/iauto/myapplication/data/: CameraParams.aidl  MaterialParams.aidl  PostProcessConfig.aidl  SceneConfig.aidl  Vec3.aidl
app/src/main/aidl/com/iauto/myapplication/renderer/: IOglRenderer.aidl
app/src/main/aidl/com/iauto/ogl/data/: CameraParams.aidl  MaterialParams.aidl  PostProcessConfig.aidl  SceneConfig.aidl  Vec3.aidl
app/src/main/aidl/com/iauto/ogl/renderer/: IOglRenderer.aidl
app/src/main/cpp/: CMakeLists.txt  native-renderer.cpp
app/src/main/cpp/ogl/: MainScene.cpp  MainScene.h  Scene.cpp
app/src/main/cpp/ogl/effect/: BloomEffect.cpp  FXAAEffect.cpp  TAAEffect.cpp  TonemapEffect.cpp
app/src/main/cpp/ogl/iblpipeline/: IBLPipeline.cpp  IBLPipeline2_init.cpp  IBLPipeline2_methods.cpp  IBLPipeline3_methods.cpp
app/src/main/cpp/ogl/include/: Camera.h  ClothMaterial.h  ClothMesh.h  Cube.h  Cube2.h  EGLCore.h  GroundPlane.h  IBLPBRMaterial.h  IBLPipeline2.h  LitMaterial.h  PBRMaterial.h  Plane.h  RenderContext.h  ResourceLoader.h  Scene.h  SimpleTextureMaterial.h  Sphere.h  Sphere2.h  Triangle.h  UnlitMaterial.h
app/src/main/cpp/ogl/material/: IBLPBRMaterial.cpp  SkinnedMaterial.cpp
app/src/main/cpp/ogl/model/: Animator.h  ModelLoader.h  ModelObject.cpp  ModelObject.h  SceneNode.h
app/src/main/cpp/ogl/object/: Cube2.cpp  Triangle.cpp
app/src/main/cpp/ogl/oglengine/: Scene.cpp
app/src/main/cpp/ogl/oglengine/effect/: DoFEffect.cpp  FogEffect.cpp  VolumetricLightEffect.cpp
app/src/main/cpp/ogl/oglengine/iblpipeline/: IBLPipeline2.cpp  IBLPipeline3.cpp  IBLPipeline3_init.cpp
app/src/main/cpp/ogl/oglengine/include/: BloomEffect.h  Camera.h  Common.h  DebugIBLMaterial.h  DebugQuad.h  DoFEffect.h  EGLCore.h  FXAAEffect.h  FogEffect.h  IBLPipeline.h  IBLPipeline3.h  Material.h  Matrix.h  Object3D.h  PostEffectBase.h  Scene.h  Shader.h  ShaderManager.h  SkinnedMaterial.h  SkyBoxEffect.h  TAAEffect.h  TonemapEffect.h  VolumetricLightEffect.h
app/src/main/cpp/ogl/oglengine/material/: ClothMaterial.cpp  DebugIBLMaterial.cpp  LitMaterial.cpp  Material.cpp  PBRMaterial.cpp  SimpleTextureMaterial.cpp  UnlitMaterial.cpp  aa
app/src/main/cpp/ogl/oglengine/model/: Animator.cpp  MeshNode.cpp  MeshNode.h  ModelLoader.cpp  SceneNode.cpp
app/src/main/cpp/ogl/oglengine/object/: ClothMesh.cpp  Cube.cpp  GroundPlane.cpp  Object3D.cpp  Plane.cpp  Sphere.cpp  Sphere2.cpp
app/src/main/cpp/ogl/oglengine/particle/: CloudEffect.cpp  CloudEffect.h  FireEffect.h  JetEffect.cpp  JetEffect.h  ParticleSystem.cpp  RainEffect.h  SnowEffect.cpp  SnowEffect.h
app/src/main/cpp/ogl/oglengine/physics/: ClothSimulation.cpp  ClothSimulation.h  CollisionPrimitives.cpp  CollisionPrimitives.h
app/src/main/cpp/ogl/oglengine/shadow/: ShadowEffect.h
app/src/main/cpp/ogl/oglengine/tween/: Tween.cpp  Tween.h
app/src/main/cpp/ogl/oglengine/utils/: Camera.cpp  DebugQuad.cpp  EGLCore.cpp  ResourceLoader.cpp  ShaderManager.cpp
app/src/main/cpp/ogl/particle/: FireEffect.cpp  ParticleSystem.h  RainEffect.cpp
app/src/main/cpp/ogl/project/: MainScene.cpp  MainScene.h
app/src/main/cpp/ogl/project/customeffect/: CircleFlameEffect.cpp  CircleFlameEffect.h  Motorcycle.cpp  Motorcycle.h  RippleEffect.cpp  RippleEffect.h
app/src/main/cpp/ogl/shadow/: ShadowEffect.cpp
app/src/main/cpp/ogl/skybox/: SkyBoxEffect.cpp
app/src/main/cpp/ogl/utils/: Camera.cpp  EGLCore.cpp  Matrix.cpp  Shader.cpp
app/src/main/java/com/iauto/myapplication/: MainActivity.kt
app/src/main/java/com/iauto/myapplication/data/: RenderParams.kt
app/src/main/java/com/iauto/myapplication/manager/: OglModelManager.kt
app/src/main/java/com/iauto/myapplication/service/: NativeRenderer.kt  OglRendererService.kt
app/src/main/java/com/iauto/myapplication/view/: InspectorPanel.kt  OglSurfaceView.kt
app/src/main/java/com/iauto/ogl/client/: InspectorPanel.java  OglSurfaceView.java  RenderService.java
app/src/main/java/com/iauto/ogl/data/: CameraParams.java  MaterialParams.java  PostProcessConfig.java  SceneConfig.java  Vec3.java
app/src/main/java/com/iauto/ogl/service/: NativeRenderer.java  OglRendererService.java
app/src/main/res/layout/: activity_main.xml  inspector_panel.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: arrays.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/test/java/com/iauto/myapplication/: ExampleUnitTest.kt
app/src/test/java/com/iauto/ogl/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
test1/: build.gradle
test1/src/androidTest/java/com/iauto/test1/: ExampleInstrumentedTest.java
test1/src/main/: AndroidManifest.xml
test1/src/main/assets/texture/: environment_info3.hdr
test1/src/main/java/com/iauto/test1/: MainActivity.java
test1/src/main/res/layout/: activity_main.xml
test1/src/main/res/values/: themes.xml
test1/src/test/java/com/iauto/test1/: ExampleUnitTest.java
test2/: build.gradle
test2/src/androidTest/java/com/iauto/test2/: ExampleInstrumentedTest.java
test2/src/main/: AndroidManifest.xml
test2/src/main/java/com/iauto/test2/: MainActivity.java
test2/src/main/res/layout/: activity_main.xml
test2/src/main/res/values/: themes.xml
test2/src/test/java/com/iauto/test2/: ExampleUnitTest.java
